# Dye

./: CMakeLists.txt  LICENSE.md  Makefile  Package.swift  README.md
.github/workflows/: ci.yml
Examples/: README.md  main.swift
Scripts/: ubuntu.sh
Sources/: Dye.swift
Sources/Dye/: Dye.swift
cmake/modules/: CMakeLists.txt  DyeConfig.cmake.in
